# final_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  deps.py  main.py  s3.py  schemas.py  settings.py
app/routers/: assessements.py  auth.py  dashboard.py  health.py
app/services/: loader.py  scoring.py
app/templates/: dashboard.html
data/: fake_systems.csv
docs/: architecture.md  requirements.md  tasks.md
tests/: conftest.py  test_task01_project_setup.py  test_task02_settings.py  test_task03_database.py  test_task04_health.py  test_task05_docker.py  test_task06_user_model.py  test_task07_auth_schemas.py  test_task08_auth_endpoints.py  test_task09_jwt_dependency.py  test_task10_domain_schemas.py  test_task11_loader.py  test_task12_scoring.py  test_task13_assessment_models.py  test_task14_s3.py  test_task15_create_assessment.py  test_task16_assessment_crud.py  test_task17_dashboard.py  test_task18_conftest.py  test_task19_ci.py
