[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pymigscore"
version = "0.1.0"
description = "REST API for cloud migration assessment"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic-settings",
    "python-multipart",
    "pyjwt",
    "passlib[bcrypt]",
    "boto3",
    "jinja2",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "testcontainers[postgresql]",
    "moto",
]

[tool.ruff]
line-length = 120
target-version = "py312"